@@ -18,7 +18,7 @@
 #include	<shadow.h>
 #endif
 #include	"auth.h"
-#include	"authstaticlist.h"
+#include	"courierauthstaticlist.h"
 
 
 
