@@ -1,3 +1,9 @@
+2011-08-02  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* Makefile.am: Renamed authstaticlist.h to courierauthstaticlist.h, and
+	added it to the list of header files that 'make install' puts into
+	includedir.
+
 2011-06-19  Sam Varshavchik  <mrsam@courier-mta.com>
 
 	* Fix gcc 4.6 warnings
